--- a/public/css/sb-admin-2.css
+++ b/public/css/sb-admin-2.css
@@ -10861,7 +10861,7 @@ a:focus {
 }
 
 .bg-login-image {
-  background: url("https://source.unsplash.com/K4mSJ7kc0As/600x800");
+  background: url("https://img.freepik.com/free-vector/abstract-geometric-wireframe-background_52683-59421.jpg?t=st=1712101992~exp=1712105592~hmac=4d76de80b6eca8351c8e4fbea2243cebebecd2fee1414fb4f1f2e20119d64d71&w=996");
   background-position: center;
   background-size: cover;
 }
