--- a/public/scss/_footer.scss
+++ b/public/scss/_footer.scss
@@ -1,5 +1,7 @@
 footer.sticky-footer {
   padding: 2rem 0;
+  position: absolute;
+  bottom: 0;
   flex-shrink: 0;
   .copyright {
     line-height: 1;
